--- a/src/css/common.css
+++ b/src/css/common.css
@@ -4,6 +4,7 @@ html, body {max-width: 100%; min-height: 100%; font-size: 16px;}
 html {overflow-x: hidden; -webkit-text-size-adjust: none;}
 body {-webkit-print-color-adjust: exact; background: #FFFFFF; font-family: 'Pretendard'; font-style: normal; font-weight: 300; color: #333333; line-height: 1.3; letter-spacing: -0.5px;}
 ul, li, dl,dt,dd {margin: 0; padding: 0; list-style: none;}
+h1, h2, h3, h4, h5, h6 {font-family: 'Pretendard';}
 a {color: #333333; text-decoration: none;}
 img {border: 0; font-size: 0; max-width: 100%;}
 table, tr, td {border-collapse: collapse;}
@@ -16,14 +17,6 @@ input {border-radius: 0;}
 /* Content Line */
 .container {padding-left: 1.5rem; padding-right: 1.5rem; width: 100%;}
 .wrapper {width: 1520px; max-width: 100%; margin: 0 auto;}
-
-/* Typography */
-h1 {font-size: 3.125rem; font-weight: 800;}
-h2 {font-size: 2.5rem; font-weight: 700;}
-h3 {font-size: 2.25rem; font-weight: 600;}
-h4 {font-size: 1.75rem; font-weight: 500;}
-h5 {font-size: 1.25rem; font-weight: 700;}
-h6 {font-size: 1rem; font-weight: 700;}
 
 /* Color */
 :root {
