--- a/src/css/normal.css
+++ b/src/css/normal.css
@@ -1,8 +1,8 @@
 /* Header */
-#header {position: fixed; top: 0; left: 0; z-index: 100; width: 100%; height: 90px; background: var(--color-white);}
+#header {position: fixed; top: 0; left: 0; z-index: 100; width: 100%; height: 90px; background: var(--color-white); transition: all 0.3s cubic-bezier(0.5, 0, 0, 1.25);}
 #header .inner {display: flex; flex-flow: row wrap; align-items: center; justify-content: space-between;}
 
-#header .logo > a {display: block; width: 88px; height: 90px; padding-top: 33px;}
+#header .logo > a {display: block; width: 88px; height: 90px; padding-top: 33px; transition: all 0.5s cubic-bezier(0.5, 0, 0, 1.25);}
 #header .logo > a img {vertical-align: top;}
 
 #header .gnb {display: flex; flex-flow: row wrap; align-items: center;}
@@ -29,7 +29,7 @@
 #header .language .ncSelect .option:hover {background: none; font-weight: 500; text-decoration: underline;}
 
 #header .inspection {margin-left: 50px;}
-#header .inspection-btn {width: 110px; height: 40px; font-size: 16px; font-weight: 600; color: var(--color-white); background-color: var(--color-black3); transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25)}
+#header .inspection-btn {width: 110px; height: 40px; font-size: 16px; font-weight: 600; color: var(--color-white); background-color: var(--color-black3); transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25);}
 #header .inspection-btn img {margin: -1px 3px 0 0; vertical-align: top;}
 #header .inspection-btn:hover {background-color: var(--color-main);}
 
@@ -43,12 +43,26 @@
 
 
 /* Footer */
+#footer {height: 730px; background-color: var(--color-gray6);}
 
+.fix_btns {position: fixed; bottom: 20px; right: 20px; z-index: 100;}
+.fix_btns > ul {}
+.fix_btns > ul > li {}
+.fix_btns > ul > li ~ li {margin-top: 20px;}
+.fix_btns > ul > li .ui-btn {display: block; width: 80px; height: 80px; border-radius: 50%; transform: translate3d(50px, 0, 0); opacity: 0; visibility: hidden;}
+.fix_btns > ul > li .ui-btn.inspection-btn {background: url('../img/inspection-m.svg') no-repeat center/48px auto, var(--color-gray6); transition: all 0.6s 0.2s cubic-bezier(0.5, 0, 0, 1.25);}
+.fix_btns > ul > li .ui-btn.naverStore-btn {background: url('../img/naver-store.svg') no-repeat center/52px auto, #01C73C; transition: all 0.4s 0.2s cubic-bezier(0.5, 0, 0, 1.25);}
+.fix_btns > ul > li .ui-btn.amazon-btn {background: url('../img/amazon.svg') no-repeat center/43px auto, #231F20; transition: all 0.2s 0.2s cubic-bezier(0.5, 0, 0, 1.25);}
+.fix_btns > ul > li .ui-btn.top-btn {background: url('../img/top-arrow.svg') no-repeat center/16px auto, #FF9900; transition: all 0.3s cubic-bezier(0.5, 0, 0, 1.25);}
+
+.fix_btns.show > ul > li .ui-btn {transform: translate3d(0, 0, 0); opacity: 1; visibility: visible;}
 
 /* Main */
+#main {min-height: 2000px;}
 .main_visual .swiper-slide {position: relative; width: 100%; height: 100vh;}
 .main_visual .swiper-slide img {position: absolute; top: 50%; left: 50%; z-index: 1; transform: translate(-50%, -50%);}
 .main_visual .swiper-slide .txt-box {position: absolute; bottom: 23%; left: 0; z-index: 20; width: 100%;}
 .main_visual .swiper-slide .txt-box .inner {width: 50%;}
 .main_visual .swiper-slide .txt-box .t1 {font-size: 100px; font-weight: 800; color: var(--color-white); line-height: normal;}
-.main_visual .swiper-slide .txt-box .t2 {margin-top: 35px; font-size: 30px; font-weight: 500; color: var(--color-white); line-height: normal;}
+.main_visual .swiper-slide .txt-box .t2 {margin-top: 35px; font-size: 30px; font-weight: 500; color: var(--color-white); line-height: normal; opacity: 0; transition: all 3s 1s cubic-bezier(0.5, 0, 0, 1.25);}
+.main_visual .swiper-slide-active .txt-box .t2 {opacity: 1;}
