--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -29,11 +29,12 @@
 .sub-head_title {font-size: 90px; font-weight: 700; color: var(--color-black2);}
 .sub-head_explan {margin-top: 35px; font-size: 60px; font-weight: 400; color: var(--color-black2);}
 .sub-body {}
+.sub-visual {width: 100%; height: 0; padding-bottom: 34.157%;}
 .sub-content {}
 
 /* 브랜드 스토리 > 돌튼 */
 #dalton {}
-.dalton-visual {width: 100%; height: 0; padding-bottom: 34.157%; background: url('../img/dalton-vs.jpg') no-repeat center center/cover;}
+.dalton-visual {background: url('/src/img/dalton-vs.jpg') no-repeat center center/cover;}
 .dalton-overview {margin-top: 120px;}
 .dalton-overview_list {margin-top: 100px;}
 .dalton-overview_row {display: flex; flex-direction: row; align-items: center; justify-content: space-between; gap: 160px;}
@@ -50,21 +51,26 @@
 .dalton-overview_image.h-circle {border-radius: 50% 50% 0 0;}
 .dalton-overview_image img {display: block;}
 .dalton-video {margin-top: 200px;}
+.dalton-video_thumb {position: relative; width: 100%; height: 0; margin-top: 40px; padding-bottom: 46.053%; background: url('/src/img/dalton-video-thumb.png') no-repeat center center/cover; cursor: pointer;}
+.dalton-video_thumb::after {position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); width: 100px; height: 100px; background: url('/src/img/dalton-video-play.png') no-repeat center center/cover; content:"";}
+.dalton-video_popup {display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); z-index: 1000;}
+.dalton-video_frame {position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); width: 1300px; max-width: 90%; height: 0; padding-top: 38.5%; border-radius: 20px; overflow: hidden;}
+.dalton-video_frame iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
 
 /* 제품소개 */
 #product {}
-.product-visual {margin-top: 40px; margin-bottom: 100px; padding: 200px 0 58px; background: url('../img/product-bg.jpg') no-repeat center right;}
+.product-visual {margin-top: 40px; margin-bottom: 100px; padding: 200px 0 58px; background: url('/src/img/product-bg.jpg') no-repeat center right;}
 .product-visual_title {font-size: 100px; font-weight: 800; color: var(--color-black2); line-height: 1.3;}
 .product-visual_text1 {margin-top: 55px; font-size: 24px; font-weight: 500; color: var(--color-black2); line-height: 1.4;}
 .product-visual_text2 {margin-top: 20px; font-size: 16px; font-weight: 300; color: var(--color-black2); line-height: 1.6;}
 .product-visual_scroll {display: inline-block; vertical-align: middle; position: relative; width: 68px; height: 68px; margin-top: 194px; border-radius: 50%; border: 1px solid var(--color-gray6);}
-.product-visual_scroll::after {content:""; position: absolute; left: 50%; top: -34px; width: 16px; height: 71px; margin-left: -8px; background: url('../img/product-icon-down.png') no-repeat center bottom/cover; animation: productArrow 1.5s infinite both;}
+.product-visual_scroll::after {content:""; position: absolute; left: 50%; top: -34px; width: 16px; height: 71px; margin-left: -8px; background: url('/src/img/product-icon-down.png') no-repeat center bottom/cover; animation: productArrow 1.5s infinite both;}
 
 .product-content {}
 .product-search {position: relative; margin-bottom: 22px; text-align: right;}
 .product-search_btn {display: inline-block; padding: 5px 12px 4px; border: 1px solid var(--color-gray6); background: none; border-radius: 30px; font-size: 0;}
 .product-search_btn > * {display: inline-block; vertical-align: middle;}
-.product-search_btn i {width: 23px; height: 23px; margin-right: 4px; background: url('../img/product-icon-detail-bk.png') no-repeat center center/cover;}
+.product-search_btn i {width: 23px; height: 23px; margin-right: 4px; background: url('/src/img/product-icon-detail-bk.png') no-repeat center center/cover;}
 .product-search_btn p {font-size: 15px; font-weight: 400; color: var(--color-gray6);}
 .product-search_form {display: none; position: absolute; right: 0; top: calc(100% + 12px); width: 1145px; max-width: 100%; background: var(--color-white); border-radius: 20px; text-align: left; box-shadow: 0 0 30px rgba(0,0,0,0.1); overflow: hidden; z-index: 1;}
 .product-search_body {display: flex; justify-content: space-between; padding: 0 20px; border-bottom: 1px solid var(--color-gray7);}
@@ -83,7 +89,7 @@
 
 .product-search.active .product-search_btn {background: var(--color-black3);}
 .product-search.active .product-search_btn p {color: var(--color-white);}
-.product-search.active .product-search_btn i {background-image: url('../img/product-icon-detail-wh.png');}
+.product-search.active .product-search_btn i {background-image: url('/src/img/product-icon-detail-wh.png');}
 .product-search.active .product-search_form {display: block;}
 
 .product-list {display: flex; align-items: start; flex-wrap: wrap; gap: 80px 40px; font-size: 0;}
