--- a/src/css/common.css
+++ b/src/css/common.css
@@ -64,21 +64,31 @@ input {border-radius: 0;}
 .w-per5 {width: 5%;}
 .w-auto {width: auto;}
 
+.round {border-radius: 999px;}
 .round-per50 {border-radius: 50%;}
 
-.round100 {border-radius: 6.25rem;}
-.round90 {border-radius: 5.625rem;}
-.round80 {border-radius: 5rem;}
-.round70 {border-radius: 4.375rem;}
-.round60 {border-radius: 3.75rem;}
-.round50 {border-radius: 3.125rem;}
-.round40 {border-radius: 2.5rem;}
-.round30 {border-radius: 1.875rem;}
-.round25 {border-radius: 1.563rem;}
-.round20 {border-radius: 1.25rem;}
-.round15 {border-radius: 0.938rem;}
-.round10 {border-radius: 0.625rem;}
-.round5 {border-radius: 0.313rem;}
+.round100 {border-radius: 100px;}
+.round90 {border-radius: 90px;}
+.round80 {border-radius: 80px;}
+.round70 {border-radius: 70px;}
+.round60 {border-radius: 60px;}
+.round50 {border-radius: 50px;}
+.round40 {border-radius: 40px;}
+.round30 {border-radius: 30px;}
+.round25 {border-radius: 25px;}
+.round20 {border-radius: 20px;}
+.round15 {border-radius: 15px;}
+.round10 {border-radius: 10px;}
+.round5 {border-radius: 5px;}
+
+.round-top {border-top-left-radius: 999px; border-top-right-radius: 999px;}
+.round-bottom {border-bottom-left-radius: 999px; border-bottom-right-radius: 999px;}
+.round-right {border-top-right-radius: 999px; border-bottom-right-radius: 999px;}
+.round-left {border-top-left-radius: 999px; border-bottom-left-radius: 999px;}
+.round-top-left {border-top-left-radius: 999px;}
+.round-top-right {border-top-right-radius: 999px;}
+.round-bottom-left {border-bottom-left-radius: 999px;}
+.round-bottom-right {border-bottom-right-radius: 999px;}
 
 .fitCover {object-fit: cover; width: 100%; height: 100%; max-width: none;}
 .fitContain {object-fit: contain;}
@@ -87,13 +97,6 @@ input {border-radius: 0;}
 .ui-sel {padding: 0 20px 0 25px; background: url('../img/arrow-down.svg') no-repeat center right/11px auto;}
 .ui-sel::-ms-expand {display: none;}
 .ui-sel:after {display: none !important;}
-
-.round-top {border-top-left-radius: 999px; border-top-right-radius: 999px;}
-.round-top-left {border-top-left-radius: 999px;}
-.round-top-right {border-top-right-radius: 999px;}
-.round-bottom {border-bottom-left-radius: 999px; border-bottom-right-radius: 999px;}
-.round-bottom-left {border-bottom-left-radius: 999px;}
-.round-bottom-right {border-bottom-right-radius: 999px;}
 
 .typing-txt {display: none;}
 
