--- a/src/css/normal.css
+++ b/src/css/normal.css
@@ -59,6 +59,21 @@
 
 /* Main */
 #main {min-height: 2000px;}
+
+.main_sec-top {position: relative; z-index: 30;}
+.main_sec-ct {position: relative; z-index: 10;}
+
+#main .content_title1 {line-height: 1.33;}
+
+#main .content-text {font-size: 50px; font-weight: 200; color: var(--color-black2); line-height: 1.4;}
+#main .content-text b {font-weight: 700;}
+
+#main .content-text2 {font-size: 30px; font-weight: 300; color: var(--color-black2); line-height: 1.53;}
+#main .content-text2 b {font-weight: 700;}
+
+#main .content-text3 {font-size: 22px; font-weight: 300; color: var(--color-black2); line-height: 1.63;}
+#main .content-text3 b {font-weight: 600;}
+
 .main_visual .swiper-slide {position: relative; width: 100%; height: 100vh;}
 .main_visual .swiper-slide img {position: absolute; top: 50%; left: 50%; z-index: 1; transform: translate(-50%, -50%);}
 .main_visual .swiper-slide .txt-box {position: absolute; bottom: 23%; left: 0; z-index: 20; width: 100%;}
@@ -66,3 +81,20 @@
 .main_visual .swiper-slide .txt-box .t1 {font-size: 100px; font-weight: 800; color: var(--color-white); line-height: normal;}
 .main_visual .swiper-slide .txt-box .t2 {margin-top: 35px; font-size: 30px; font-weight: 500; color: var(--color-white); line-height: normal; opacity: 0; transition: all 3s 1s cubic-bezier(0.5, 0, 0, 1.25);}
 .main_visual .swiper-slide-active .txt-box .t2 {opacity: 1;}
+
+.main_dalton {margin-top: 120px;}
+.main_dalton .main_sec-ct {}
+.main_dalton .content-text2 {margin-top: 60px;}
+
+.main_dalton-images {display: flex; flex-flow: row wrap; align-items: flex-start; justify-content: flex-end; gap: 30px 70px; transform: translate3d(0, 150px, 0);}
+.main_dalton-img-item {overflow: hidden; width: 400px; max-width: calc(33.333% - (140px / 3));}
+.main_dalton-img-item.item2 {transform: translate3d(0, -200px, 0);}
+
+.main_dalton-info {margin-top: 100px;}
+.dalton_logo {margin-bottom: 50px;}
+.dalton-text {margin-left: 28px;}
+
+.dalton_proud {display: flex; flex-flow: row wrap; gap: 40px; margin-top: 100px;}
+.dalton_proud-item {display: flex; flex-flow: column wrap; align-items: center; justify-content: center; width: calc(100% / 3 - 80px / 3); height: 350px; text-align: center; background-color: #fff; box-shadow: 0 0 250px 300px rgba(0,0,0,0.015);}
+.dalton_proud-item .t1 {font-size: 26px; font-weight: 600; color: var(--color-black2);}
+.dalton_proud-item .t2 {font-size: 16px; font-weight: 400; color: var(--color-gray5);}
