--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -57,6 +57,8 @@
 .dalton-video_frame {position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); width: 1300px; max-width: 90%; height: 0; padding-top: 38.5%; border-radius: 20px; overflow: hidden;}
 .dalton-video_frame iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
 
+/* 브랜드 스토리 > 고객리뷰 */
+
 /* 제품소개 */
 #product {}
 .product-visual {margin-top: 40px; margin-bottom: 100px; padding: 200px 0 58px; background: url('/src/img/product-bg.jpg') no-repeat center right;}
