--- a/src/css/normal2.css
+++ b/src/css/normal2.css
@@ -47,3 +47,49 @@
 .dys-sunglassses-img {position: relative; width: 100%; height: 15vw; border-radius: 1000px 1000px 0 0; overflow: hidden;}
 .dys-sunglassses-img img {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; height: 100%; object-fit: cover;}
 .dys-sunglasses-wr .dys-exp-txt--01 {padding: 64px 0 26px;}
+
+/* 고객지원 > 가이드 */
+.guide-step01 .guide-wr {border-top: 1px solid #666;}
+#guide .sub-content {padding: 75px 0 45px;}
+#guide .sub-content:first-child {padding-top: 0;}
+#guide .sub-content:last-child {padding-bottom: 0;}
+.guide-step01 {text-align: center;}
+.guide-sec-tit {padding: 75px 0; font-size: 40px; font-weight: 700; color: #0f0f0f; text-align: left;}
+.guide-sec-tit span {color: #F6AB00;}
+.guide-wr {}
+.guide-step01-tit {display: inline-block; position: relative; padding-top: 10px; margin-bottom: 60px; font-size: 50px; font-weight: 700; color: #0f0f0f; text-align: center;}
+.guide-step01-tit::after {content: ''; position: absolute; left: 0; bottom: 0; width: 100%; height: 6px; background-color: #0f0f0f;}
+.guide-step01-tit::before {content: ''; position: absolute; left: 50%; top: 100%; width: 1px; height: 60px; border-left: 1px dashed #B7B7B7;}
+.guide-step01-ul {position: relative; display: flex; gap: 120px; padding-top: 60px; text-align: center;}
+.guide-step01-ul::after {content: ''; position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: calc(50% + 60px); height: 100px; border: 1px dashed #B7B7B7; border-bottom: 0;}
+.guide-step01-li {flex: 1; position: relative; z-index: 10;}
+.guide-step01-box {position: relative; z-index: 10; padding: 10px 50px; border-radius: 100px; background-color: #fff; box-shadow: 0 0 25px 15px rgba(0, 0, 0, .05);}
+.guide-dot {position: relative;}
+.guide-dot::after {content: ''; position: absolute; top: 0; left: 50%; transform: translate(-50%, -50%); width: 16px; height: 16px; border-radius: 50%; border: 4px solid #fff; background-color: #333;}
+.guide-step01-txt {color: #0f0f0f;}
+.guide-step01-txt--01 {padding: 25px 0 10px; font-size: 28px; font-weight: 500; border-bottom: 1px dashed #B7B7B7;}
+.guide-step01-txt--01 span {display: inline-block; margin: 0 10px 15px 0; vertical-align: middle; font-size: 60px; font-weight: 700; color: #F6AB00; line-height: 1;}
+.guide-step01-txt--02 {padding: 25px 0 30px; font-size: 34px; font-weight: 300;}
+.guide-step01-txt--03 {position: relative; z-index: 10; margin: 55px 0; padding: 20px 0; font-size: 28px; font-weight: 500; background-color: #fff;}
+.guide-step01-txt--03 b {position: relative;}
+.guide-step01-txt--03 b::after {content: ''; position: absolute; left: 0; bottom: 0; width: 100%; height: 3px; background-color: #0f0f0f;}
+.guide-step01-test-wr {display: flex; width: 100%;}
+.guide-step01-test {flex: 1;}
+.guide-step01-circle {position: relative; margin: auto; width: 200px; height: 200px; border-radius: 50%; box-shadow: 0 0 25px 15px rgba(0, 0, 0, .05);}
+.guide-step01-circle--red {background: linear-gradient(to bottom, #F56060, #AB94EC);}
+.guide-step01-circle--green {background: linear-gradient(to bottom, #75BB64, #6AB1F2);}
+.guide-step01-circle::before {content: ''; position: absolute; left: 50%; bottom: 100%; width: 1px; height: 300px; border-left: 1px dashed #B7B7B7;}
+.guide-step01-circle-in {display: flex; align-items: center; justify-content: center; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 174px; height: 174px; border-radius: 50%; background-color: #fff;  z-index: 10; font-size: 30px; font-weight: 600; color: #0f0f0f;}
+
+.guide-step02-ul {display: flex; gap: 70px;}
+.guide-step02-li {flex: 1;}
+.guide-step02-img {position: relative; width: 100%; height: 24vw; overflow: hidden;}
+.guide-step02-img img {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; height: 100%; object-fit: cover;}
+.guide-step02-li:nth-child(2) .guide-step02-img {border-radius: 1000px 1000px 0 0;}
+.guide-step02-li:nth-child(3) .guide-step02-img {border-radius: 0 200px 0 0;}
+.guide-step02-txt-wr {display: flex; flex-direction: column; gap: 6px; padding: 20px 0;}
+.guide-step03-txt-wr {display: flex; flex-direction: column; gap: 14px; padding: 40px; padding-bottom: 0;}
+.guide-info-tit {font-size: 24px; font-weight: 600; color: #0f0f0f;}
+.guide-info-txt {font-size: 18px; font-weight: 300; color: #333;}
+.guide-info-txt span {color: #999;}
+.guide-step03-img {box-shadow: 0 0 25px 5px rgba(0, 0, 0, .05);}
