--- a/src/css/normal.css
+++ b/src/css/normal.css
@@ -86,7 +86,7 @@
 .main_dalton .main_sec-ct {}
 .main_dalton .content-text2 {margin-top: 60px;}
 
-.main_dalton-images {display: flex; flex-flow: row wrap; align-items: flex-start; justify-content: flex-end; gap: 30px 70px; transform: translate3d(0, 150px, 0);}
+.main_dalton-images {display: flex; flex-flow: row wrap; align-items: flex-start; justify-content: flex-end; gap: 30px 70px; transform: translate3d(0, 130px, 0);}
 .main_dalton-img-item {overflow: hidden; width: 400px; max-width: calc(33.333% - (140px / 3));}
 .main_dalton-img-item.item2 {transform: translate3d(0, -200px, 0);}
 
@@ -110,3 +110,17 @@
 .main_dalton-info .dalton_exp-beforeAfter .slider-button {pointer-events: none; position: absolute; width: 66px; height: 66px; border-radius: 50%; left: calc(50% - 33px); top: calc(50% - 33px); display: flex; justify-content: center; align-items: center; z-index: 0; cursor: pointer;}
 .main_dalton-info .dalton_exp-beforeAfter .slider-button:after {content: ""; display: block; position: absolute; top: 50%; left: 50%; z-index: 1; width: 4px; height: 500px; transform: translate(-50%, -50%); background-color: var(--color-black2);}
 .main_dalton-info .dalton_exp-beforeAfter .slider-circle {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 66px; height: 66px; border-radius: 50%; background: url('../img/beforeAfter-arrow.png') no-repeat center/38px auto, var(--color-black2); z-index: 11; cursor: pointer;}
+
+.main_dalton-info .dalton_ex {display: flex; flex-flow: row wrap; gap: 40px; margin-top: 50px;}
+.main_dalton-info .dalton_ex-item {width: calc(100% / 3 - 80px / 3); height: 430px; text-align: center; background-color: #fff;}
+.main_dalton-info .dalton_ex-item .txt {padding-right: 84px; text-align: right;}
+
+.main_product {margin-top: 200px;}
+
+.main_product-types {display: flex; flex-flow: row wrap; align-items: flex-start; justify-content: flex-end; gap: 30px 70px; }
+.main_product-type-item {position: relative; width: 460px; max-width: calc(33.333% - (140px / 3));}
+.main_product-type-item .img {overflow: hidden; width: 100%;}
+.main_product-type-item .txt {margin-top: 20px;}
+.main_product-type-item .txt .t1 {font-size: 24px; font-weight: 600; color: var(--color-black2); line-height: normal;}
+.main_product-type-item .txt .t2 {margin-top: 6px; font-size: 18px; font-weight: 300; color: var(--color-gray6); line-height: normal;}
+.main_product-type-item.item3 .txt {position: absolute; top: 380px; right: calc(100% + 20px); z-index: 10; width: 100%; margin-top: 0; text-align: right;}
