--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -62,8 +62,8 @@
 /* 브랜드 스토리 > 인사말 */
 #greeting {}
 .greeting-visual {background: url('/src/img/greeting-vs.jpg') no-repeat center center/cover;}
-.greeting-mean {position: relative; padding-top: 120px;}
-.greeting-mean_paralax {position: absolute; left: calc((100% - 1520px) / 2); top: 50%; margin-left: -10px; font-size: 200px; font-weight: 400; color: var(--color-gray1); z-index: -1;}
+.greeting-mean {position: relative; padding-top: 120px; overflow: hidden;}
+.greeting-mean_paralax {position: absolute; left: calc((100% - 1520px) / 2); top: 50%; min-width: 150%; margin-left: -10px; font-size: 200px; font-weight: 400; color: var(--color-gray1); line-height: 1; z-index: -1;}
 .greeting-mean_paralax b {font-weight: 700;}
 .greeting-mean_title {display: inline-block; vertical-align: middle; position: relative; padding-right: 180px; font-size: 30px; font-weight: 800; color: var(--color-black2);}
 .greeting-mean_title::after {position: absolute; top: 50%; right: 0; width: 44.28%; height: 0; border-top: 1px solid var(--color-gray6); content:""; z-index: 0;}
@@ -86,10 +86,6 @@
 .greeting-mean_text3 {margin-top: 26px; font-size: 18px; font-weight: 400; color: var(--color-black2);}
 .greeting-mean_item4 {border-radius: 999px 999px 0 0; overflow: hidden;}
 .greeting-mean_item4 img {}
-
-
-
-
 
 /* 제품소개 */
 #product {}
