[서브] 주요연혁 페이지 작업 완료(PC)

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -37,6 +37,7 @@ input {border-radius: 0;}
   --color-gray7: #E9E9E9;
   --color-gray8: #B8B8B8;
   --color-gray9: #B5B5B5;
+  --color-gray10 : #C7C7C7;
 }
 
 /* Common */
