[서브] 문의하기 게시판 작업 완료 (PC)

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -25,6 +25,7 @@ input {border-radius: 0;}
 
   --color-main: #F6AB00;
   --color-white: #FFFFFF;
+  --color-white2: #FAFAFA;
   --color-black1: #000000;
   --color-black2: #0F0F0F;
   --color-black3: #212121;
