--- a/skin/board/qa/style.css
+++ b/skin/board/qa/style.css
@@ -146,7 +146,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 .profile_info{margin:10px 0 0;display:inline-block;}
 .profile_info_ct{}
 .profile_info_ct_ul{margin: 0 -10px;}
-.profile_info_ct_ul > li{position: relative; padding: 0 10px;}
+.profile_info_ct_ul > li{position: relative; display: inline-block; vertical-align: middle; padding: 0 10px;}
 .profile_info_ct_ul > li:after{content: ""; display: block; position: absolute; top: 50%; right: -0.5px; width: 1px; height: 10px; margin-top: -5px; background: #666;}
 .profile_info_ct_ul > li:last-child:after{display: none;}
 .profile_info_ct_ul > li i{margin-right: 3px;}
@@ -209,7 +209,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 #bo_v_img a.view_image {display:block}
 #bo_v_img img {margin-bottom:20px;max-width:100%;height:auto}
 
-#bo_v_con {width:100%; line-height:1.7; word-break:break-all; overflow:hidden}
+#bo_v_con {width:100%; line-height:1.7; word-break:break-all; overflow:hidden; font-weight: 400;}
 #bo_v_con a {color:#000;text-decoration:underline}
 #bo_v_con img {max-width:100%;height:auto}
 
@@ -337,10 +337,11 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 
 #bo_w .bo_w_select select {border:1px solid #d0d3db;width:100%;height:40px;border-radius:3px}
 
-#bo_w .btn_confirm{margin-top: 20px; text-align: center;}
-#bo_w .btn_confirm_ul{display: inline-block;}
-#bo_w .btn_confirm_ul > li{margin-left: 4px;}
+#bo_w .btn_confirm{text-align: left;}
+#bo_w .btn_confirm_ul > li{display: inline-block; vertical-align: middle; margin-left: 4px;}
 #bo_w .btn_confirm_ul > li:first-child{margin-left: 0;}
+#bo_w .btn_confirm .bo_btn1, #bo_w .btn_confirm .bo_btn2 {width: 147px; height: 53px; line-height: 52px; border-radius: 100px; font-size: 18px; font-weight: 600; text-align: center;}
+#bo_w .btn_confirm .bo_btn1 {background: var(--color-black3);}
 
 .inquiry_top { position: relative; width: 100%; height: auto; font-size: 0; margin-bottom: 10px;}
 .inquiry_top p { display: inline-block; vertical-align: middle; position: relative; }
@@ -394,6 +395,45 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 .bo_btn3{display: block; height: 40px; line-height: 40px; padding: 0 15px; border-radius: 5px; font-size: 14px; font-weight: 400; color: #fff; background: #e50000;}
 
 .mo_view{display: none !important;}
+
+/* 2024-03-07 추가 */
+/* > Write */
+#qa-write {padding-bottom: 0;}
+#qa-write .sub-body {position: relative; padding-bottom: 140px;}
+#qa-write .sub-body::before {position: absolute; left: 0; bottom: 0; width: 100%; height: calc(100% + 110px); background: var(--color-white2); content: ""; z-index: -1;}
+#qa-write #bo_w {padding: 100px 200px 100px 170px; background: var(--color-white); border-radius: 130px 0 0 0;}
+#qa-form {}
+.qa-section {margin-bottom: 60px;}
+.qa-head {}
+.qa-head_title {font-size: 24px; font-weight: 500; color: var(--color-black2);}
+.qa-head_title span {font-size: 18px; font-weight: 400; color: var(--color-gray6);}
+.qa-body {margin-top: 20px;}
+.qa-body-category {padding: 0 30px; margin-top: 35px; font-size: 0;}
+.qa-category_radio {display: none;}
+.qa-category_label {display: inline-block; vertical-align: middle; width: 160px; line-height: 59px; border: 1px solid var(--color-gray3); text-align: center; font-size: 16px; font-weight: 300; color: var(--color-gray5); cursor: pointer;}
+.qa-category_radio:checked + .qa-category_label {color: var(--color-main); border: 1px solid var(--color-main); box-shadow: 0 0 0 1px var(--color-main) inset; font-weight: 400;}
+.qa-category_label:not(:last-child) {margin-right: 10px;}
+.qa-body-inform {padding: 0 30px; margin-top: 20px;}
+.qa-inform_list {display: flex; flex-wrap: wrap; gap: 22px 70px;}
+.qa-inform_item {display: flex; align-items: center; width: calc(50% - 35px); border-bottom: 1px solid var(--color-gray5);}
+.qa-inform_label {padding-right: 10px; font-size: 18px; font-weight: 400; color: var(--color-black2);}
+.qa-inform_text {flex: 1; height: 55px; padding: 10px; border: none; color: var(--color-gray5);}
+.qa-body-content {margin-top: 35px;}
+.qa-body-content textarea {width: 100%; height: 260px !important; padding: 20px 30px; border: 1px solid var(--color-gray3); box-shadow: none; border-radius: 0; resize: none; font-weight: 400; color: var(--color-gray5);}
+.qa-body-content textarea::placeholder {font-weight: 300; color: var(--color-gray4);}
+.qa-policy {margin-top: 15px;}
+.qa-policy-check {}
+.qa-policy-content {display: none; position: relative; margin-top: 6px;}
+.qa-policy-content textarea {width: 100%; height: 180px !important; padding: 20px 30px; border-radius: 10px; border: none !important; background: var( --color-gray1); color: var(--color-gray4); box-shadow: none !important;}
+.qa-policy-close {position: absolute; right: 10px; bottom: 15px; font-size: 14px; font-weight: 600; border: none; background: none;}
+.qa-body-marketing {}
+.qa-marketing_text {font-size: 18px; font-weight: 300; color: var(--color-gray5);}
+.qa-marketing_list {margin-top: 32px;}
+.qa-marketing_check {display: inline-block; vertical-align: middle;}
+.qa-marketing_check:not(:last-child) {margin-right: 32px;}
+.qa-body-captcha {}
+
+
 
 /* Responsive */
 @media screen and (max-width:1290px){
