[서브] 차별화기술 페이지 작업 완료 (PC)

--- a/src/css/normal2.css
+++ b/src/css/normal2.css
@@ -49,6 +49,50 @@
 .dys-sunglasses-wr .dys-exp-txt--01 {padding: 64px 0 26px;}
 
 
+/* 기술소개 > 차별화기술 */
+.sub-mid-tit {font-size: 40px; font-weight: 700; color: #0f0f0f;}
+.difference-visual {position: relative; background: url('/src/img/difference-vs.jpg') no-repeat center / cover;}
+.difference-overview {padding: 120px 0;}
+.difference-overview-wr {display: flex; gap: 130px; padding-top: 100px; align-items: center;}
+.difference-overview-txt-wr {}
+.difference-overview-txt2 {padding: 25px 0 35px;}
+.difference-img {flex-shrink: 0; position: relative; margin-right: 40px; margin-bottom: -200px; width: clamp(260px, 35vw, 540px); height: clamp(260px, 35vw, 540px); border-radius: 50%; overflow: hidden; border: 1px solid #ebebeb;}
+.difference-cert {padding: 150px 0 110px; background-color: #F8F8F8;}
+.difference-cert-wr {display: flex; gap: 94px;}
+.difference-cert-big {position: relative; width: 35%; height: 32vw; box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, .05);}
+.difference-cert-ul {display: flex; flex-wrap: wrap; gap: 20px; width: calc(75% - 94px);}
+.difference-cert-li {position: relative; width: calc(100% / 4 - 60px / 4); height: 15.8vw; box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, .05);}
+.difference-filter {padding: 160px 0 85px;}
+.difference-filter-wr {padding-top: 80px;}
+.difference-filter-ul {display: flex; gap: 8vw; justify-content: space-between; padding: 140px 0 80px;}
+.difference-filter-li {width: 35%; max-width: 400px;}
+.difference-filter-li__img {position: relative; margin: 30px 0 20px; width: 100%; height: min(15vw, 270px);}
+.difference-filter-li:not(:last-child) .difference-filter-li__img {border-radius: 0 1000px 1000px 0; overflow: hidden;}
+.difference-img img, .difference-cert-big img, .difference-cert-li img, .difference-filter-li__img img {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100%; height: 100%; object-fit: cover;}
+.difference-filter-li__txt {text-align: center;}
+.difference-filter-txt-wr {line-height: 1.6;}
+.difference-filter-txt-wr .guide-info-tit {padding-bottom: 20px;}
+.difference-compare {padding: 85px 0 145px;}
+.difference-compare-ul {display: flex; gap: 40px; padding-top: 80px;}
+.difference-compare-li {flex: 1;}
+.difference-compare-box {display: flex; align-items: center; gap: 50px; margin-top: 15px; padding: 40px; background-color: #fff; color: #0f0f0f; box-shadow: 3px 3px 10px 3px rgba(0, 0, 0, .05);}
+.difference-compare-img {display: flex; align-items: center; justify-content: center; width: 235px; height: 235px; border-radius: 50%; border: 8px solid #EDEDED; background-color: #fff;}
+.difference-compare-txt-ul {display: flex; flex-direction: column; gap: 10px;}
+.difference-comapre-txt-li {display: flex; font-size: 20px;}
+.difference-comapre-txt-li__key {width: 140px; font-weight: 500;}
+.difference-comapre-txt-li__key::before {content: ''; display: inline-block; margin-right: 13px; vertical-align: middle; width: 4px; height: 4px; border-radius: 50%; background-color: #0f0f0f;}
+.difference-comapre-txt-li__val {width: calc(100% - 140px); font-weight: 400;}
+.difference-compare-li:first-child .difference-compare-box {background: #212121 url('/src/img/difference-logo.png') no-repeat right bottom; color: #fff;}
+.difference-compare-li:first-child .difference-compare-img {background-color: #f6f6f6; border-color: #f6f6f6;}
+.difference-compare-li:first-child .difference-comapre-txt-li__key::before {background-color: #fff;}
+.difference-color {padding: 85px 0 140px; background-color: #F8F8F8;}
+.difference-color-li {padding-top: 80px;}
+.difference-color-li__img-wr {display: flex; padding-top: 15px;}
+.difference-color-li__img {flex: 1;}
+.difference-color-li__img img {object-fit: cover; object-position: center;}
+
+
+
 /* 고객지원 > 가이드 */
 .guide-step01 .guide-wr {border-top: 1px solid #666;}
 #guide .sub-content {padding: 75px 0 45px;}
@@ -91,8 +135,8 @@
 .guide-step02-txt-wr {display: flex; flex-direction: column; gap: 6px; padding: 20px 0;}
 .guide-step03-txt-wr {display: flex; flex-direction: column; gap: 14px; padding: 40px; padding-bottom: 0;}
 .guide-info-tit {font-size: 24px; font-weight: 600; color: #0f0f0f;}
-.guide-info-txt {font-size: 18px; font-weight: 300; color: #333;}
-.guide-info-txt span {color: #999;}
+.guide-info-txt {font-size: 18px; font-weight: 300; color: #333; line-height: 1.5;}
+.guide-info-txt span {color: #999; line-height: 1.8;}
 .guide-step03-img {box-shadow: 0 0 25px 5px rgba(0, 0, 0, .05);}
 
 
@@ -118,3 +162,4 @@
 .location-map .root_daum_roughmap {width: 100%;}
 .location-map .root_daum_roughmap .wrap_map {height: 500px;}
 .location-map .root_daum_roughmap .wrap_controllers, .location-map .root_daum_roughmap .border1, .location-map .root_daum_roughmap .border2,.location-map .root_daum_roughmap .border3, .location-map .root_daum_roughmap .border4 {display: none;}
+
